run a pre-commit hook

--- a/bonsai/models/vae/tests/VAE_image_reconstruction_example.ipynb
+++ b/bonsai/models/vae/tests/VAE_image_reconstruction_example.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "id": "e320f2616490638c",
    "metadata": {},
-   "source": "<a href=\"https://colab.research.google.com/github/eari100/bonsai/blob/vae-weights-and-tests/bonsai/models/vae/tests/VAE_image_reconstruction_example.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   "source": [
+    "<a href=\"https://colab.research.google.com/github/eari100/bonsai/blob/vae-weights-and-tests/bonsai/models/vae/tests/VAE_image_reconstruction_example.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -20,7 +22,9 @@
    "cell_type": "markdown",
    "id": "457a9ff4dbb654d7",
    "metadata": {},
-   "source": "## **Set-up**"
+   "source": [
+    "## **Set-up**"
+   ]
   },
   {
    "cell_type": "code",
@@ -62,7 +66,9 @@
    "cell_type": "markdown",
    "id": "7efb43325c1f570c",
    "metadata": {},
-   "source": "## **Download Sample Images**"
+   "source": [
+    "## **Download Sample Images**"
+   ]
   },
   {
    "cell_type": "code",
@@ -111,7 +117,9 @@
    "cell_type": "markdown",
    "id": "6beb39b427edc794",
    "metadata": {},
-   "source": "## **Load VAE Model**"
+   "source": [
+    "## **Load VAE Model**"
+   ]
   },
   {
    "cell_type": "code",
@@ -120,10 +128,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flax import nnx\n",
     "from huggingface_hub import snapshot_download\n",
     "\n",
-    "from bonsai.models.vae import modeling as model_lib\n",
     "from bonsai.models.vae import params\n",
     "\n",
     "\n",
@@ -145,7 +151,9 @@
    "cell_type": "markdown",
    "id": "f6d864491e958d33",
    "metadata": {},
-   "source": "## **Image Preprocessing**"
+   "source": [
+    "## **Image Preprocessing**"
+   ]
   },
   {
    "cell_type": "code",
@@ -169,7 +177,9 @@
    "cell_type": "markdown",
    "id": "5265f8b4e749fbb6",
    "metadata": {},
-   "source": "## **Image Postproessing**"
+   "source": [
+    "## **Image Postproessing**"
+   ]
   },
   {
    "cell_type": "code",
@@ -192,7 +202,9 @@
    "cell_type": "markdown",
    "id": "37e8fe3fd0967830",
    "metadata": {},
-   "source": "## **Run Reconstruct on Sample Images**"
+   "source": [
+    "## **Run Reconstruct on Sample Images**"
+   ]
   },
   {
    "cell_type": "code",
@@ -264,7 +276,9 @@
    "cell_type": "markdown",
    "id": "3b8f6910319ce5a6",
    "metadata": {},
-   "source": "## **Batch Processing**"
+   "source": [
+    "## **Batch Processing**"
+   ]
   },
   {
    "cell_type": "code",
