Modify code style

--- a/bonsai/models/vae/tests/VAE_image_reconstruction_example.ipynb
+++ b/bonsai/models/vae/tests/VAE_image_reconstruction_example.ipynb
@@ -5,7 +5,7 @@
    "id": "e320f2616490638c",
    "metadata": {},
    "source": [
-    "<a href=\"https://colab.research.google.com/github/eari100/bonsai/blob/vae-weights-and-tests/bonsai/models/vae/tests/VAE_image_reconstruction_example.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+    "<a href=\"https://colab.research.google.com/github/jax-ml/bonsai/blob/main/bonsai/models/vae/tests/VAE_image_reconstruction_example.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
    ]
   },
   {
@@ -33,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install -q git+https://github.com/eari100/bonsai@vae-weights-and-tests\n",
+    "!pip install -q git+https://github.com/jax-ml/bonsai@main\n",
     "!pip install -q pillow matplotlib requests\n",
     "!pip install -q scikit-image"
    ]
@@ -130,17 +130,18 @@
    "source": [
     "from huggingface_hub import snapshot_download\n",
     "\n",
-    "from bonsai.models.vae import params\n",
+    "from bonsai.models.vae import modeling, params\n",
     "\n",
     "\n",
     "def load_vae_model():\n",
     "    model_name = \"stabilityai/sd-vae-ft-mse\"\n",
+    "    config = modeling.ModelConfig.stable_diffusion_v1_5()\n",
     "\n",
     "    print(f\"Downloading {model_name}...\")\n",
     "    model_ckpt_path = snapshot_download(model_name)\n",
     "    print(\"Download complete!\")\n",
     "\n",
-    "    model = params.create_model_from_safe_tensors(file_dir=model_ckpt_path)\n",
+    "    model = params.create_model_from_safe_tensors(file_dir=model_ckpt_path, cfg=config)\n",
     "\n",
     "    print(\"VAE model loaded_successfully!\")\n",
     "\n",
@@ -178,7 +179,7 @@
    "id": "5265f8b4e749fbb6",
    "metadata": {},
    "source": [
-    "## **Image Postproessing**"
+    "## **Image Postprocessing**"
    ]
   },
   {
