--- a/bonsai/models/clip/clip_model_jax.ipynb
+++ b/bonsai/models/clip/clip_model_jax.ipynb
@@ -103,7 +103,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "9AyT2fC4sA07"
       },
@@ -134,7 +134,7 @@
         "            x = x + h\n",
         "\n",
         "        x = nn.LayerNorm()(x[:, -1])\n",
-        "        return x\n"
+        "        return x"
       ]
     },
     {
