Imeplemented KV caching (WIP)

--- a/bonsai/models/unet/tests/UNet_segmentation_example.ipynb
+++ b/bonsai/models/unet/tests/UNet_segmentation_example.ipynb
@@ -629,7 +629,7 @@
     "    return state, loss\n",
     "\n",
     "\n",
-    "print(\"🚀 Starting training from checkpoint...\")\n",
+    "print(\"Starting training from checkpoint...\")\n",
     "train_loader, vis_loader = load_dataset()\n",
     "num_epochs = 100\n",
     "state = train_state\n",
