Models quick import
Quicker model import
The idea is to simplify the model import and expose models inside `bonsai.__init__`:

Today’s API:
``python
import flax.nnx as nnx
from bonsai.models.convnext.modeling import ConvNeXt, ModelConfig

cfg = ModelConfig.convnext_base_224()
model = ConvNeXt(cfg, rngs=nnx.Rngs(0))
```

Suggested API:
```python
import flax.nnx as nnx
from bonsai import ConvNeXt, ConvNeXtConfig

cfg = ConvNeXtConfig.base_224()
model = ConvNeXt(cfg, rngs=nnx.Rngs(0))
```

Additionally, renamed model's configs to ModelConfig, e.g.
Mamba2Config -> ModelConfig

--- a/bonsai/models/sam2/tests/SAM2_image_predictor_example.ipynb
+++ b/bonsai/models/sam2/tests/SAM2_image_predictor_example.ipynb
@@ -327,7 +327,7 @@
     "MODEL_CP_PATH = \"./checkpoints/\" + model_name.split(\"/\")[1]\n",
     "snapshot_download(model_name, local_dir=MODEL_CP_PATH)\n",
     "\n",
-    "config = modeling.SAM2Config.sam2_small()\n",
+    "config = modeling.ModelConfig.sam2_small()\n",
     "model_obj = params.create_sam2_from_pretrained(MODEL_CP_PATH + \"/model.safetensors\", config)\n",
     "\n",
     "predictor = modeling.SAM2ImagePredictor(model_obj)"
